--- a/CryptoArbitrage/pom.xml
+++ b/CryptoArbitrage/pom.xml
@@ -43,6 +43,11 @@
     	<artifactId>xchange-gdax</artifactId>
     	<version>4.3.1</version>
 	</dependency>
+	<dependency>
+    	<groupId>info.bitrich.xchange-stream</groupId>
+    	<artifactId>xchange-bitfinex</artifactId>
+    	<version>4.3.1</version>
+	</dependency>
 	
 	<dependency>
        <groupId>org.slf4j</groupId>
