--- a/CryptoArbitrage/pom.xml
+++ b/CryptoArbitrage/pom.xml
@@ -68,7 +68,7 @@
 	</dependency>
 	<dependency>
     	<groupId>info.bitrich.xchange-stream</groupId>
-    	<artifactId>xchange-bitstamp</artifactId>
+    	<artifactId>xchange-kraken</artifactId>
     	<version>4.3.3-SNAPSHOT</version>
 	</dependency>
 	<dependency>
@@ -95,6 +95,11 @@
 		<groupId>info.bitrich.xchange-stream</groupId>
 		<artifactId>xchange-poloniex2</artifactId>
 		<version>4.3.3-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+  		<groupId>org.knowm.xchange</groupId>
+  		<artifactId>xchange-kraken</artifactId>
+  		<version>4.3.3</version>
 	</dependency>
 	
 	<dependency>
