--- a/CryptoArbitrage/pom.xml
+++ b/CryptoArbitrage/pom.xml
@@ -78,6 +78,11 @@
 	</dependency>
 	<dependency>
     	<groupId>info.bitrich.xchange-stream</groupId>
+    	<artifactId>xchange-hitbtc</artifactId>
+    	<version>4.3.3-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+    	<groupId>info.bitrich.xchange-stream</groupId>
     	<artifactId>xchange-bitfinex</artifactId>
     	<version>4.3.3-SNAPSHOT</version>
 	</dependency>
