--- a/CryptoArbitrage/pom.xml
+++ b/CryptoArbitrage/pom.xml
@@ -89,6 +89,11 @@
     	<version>4.3.12-SNAPSHOT</version>
 	</dependency>
 	<dependency>
+    	<groupId>info.bitrich.xchange-stream</groupId>
+    	<artifactId>xchange-bitflyer</artifactId>
+    	<version>4.3.12-SNAPSHOT</version>
+	</dependency>
+	<dependency>
 		<groupId>info.bitrich.xchange-stream</groupId>
     	<artifactId>xchange-gemini</artifactId>
     	<version>4.3.12-SNAPSHOT</version>
