--- a/CryptoArbitrage/.classpath
+++ b/CryptoArbitrage/.classpath
@@ -32,6 +32,7 @@
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="/xchange-core"/>
 	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
 		<attributes>
 			<attribute name="optional" value="true"/>
