--- a/CryptoArbitrage/pom.xml
+++ b/CryptoArbitrage/pom.xml
@@ -59,7 +59,6 @@
     </resources>
   </build>
 
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -71,52 +70,57 @@
     <dependency>
     	<groupId>info.bitrich.xchange-stream</groupId>
     	<artifactId>xchange-stream-core</artifactId>
-    	<version>5.3.12-SNAPSHOT</version>
+    	<version>4.3.17-SNAPSHOT</version>
    </dependency>
 	<dependency>
     	<groupId>info.bitrich.xchange-stream</groupId>
     	<artifactId>xchange-binance</artifactId>
-    	<version>5.3.12-SNAPSHOT</version>
+    	<version>4.3.17-SNAPSHOT</version>
 	</dependency>
 	<dependency>
     	<groupId>info.bitrich.xchange-stream</groupId>
     	<artifactId>xchange-hitbtc</artifactId>
-    	<version>5.3.12-SNAPSHOT</version>
+    	<version>4.3.17-SNAPSHOT</version>
 	</dependency>
 	<dependency>
     	<groupId>info.bitrich.xchange-stream</groupId>
     	<artifactId>xchange-bitfinex</artifactId>
-    	<version>5.3.12-SNAPSHOT</version>
+    	<version>4.3.17-SNAPSHOT</version>
 	</dependency>
 	<dependency>
     	<groupId>info.bitrich.xchange-stream</groupId>
     	<artifactId>xchange-bitflyer</artifactId>
-    	<version>5.3.12-SNAPSHOT</version>
+    	<version>4.3.17-SNAPSHOT</version>
 	</dependency>
 	<dependency>
 		<groupId>info.bitrich.xchange-stream</groupId>
     	<artifactId>xchange-gemini</artifactId>
-    	<version>5.3.12-SNAPSHOT</version>
+    	<version>4.3.17-SNAPSHOT</version>
 	</dependency>
 	<dependency>
 		<groupId>info.bitrich.xchange-stream</groupId>
 		<artifactId>xchange-poloniex2</artifactId>
-		<version>5.3.12-SNAPSHOT</version>
+		<version>4.3.17-SNAPSHOT</version>
 	</dependency>
 	<dependency>
   		<groupId>org.knowm.xchange</groupId>
   		<artifactId>xchange-kraken</artifactId>
-  		<version>5.3.12-SNAPSHOT</version>
+  		<version>4.3.22-SNAPSHOT</version>
 	</dependency>
 	<dependency>
   		<groupId>info.bitrich.xchange-stream</groupId>
   		<artifactId>xchange-cexio</artifactId>
-  		<version>5.3.12-SNAPSHOT</version>
+  		<version>4.3.17-SNAPSHOT</version>
 	</dependency>
 	<dependency>
   		<groupId>info.bitrich.xchange-stream</groupId>
   		<artifactId>xchange-wex</artifactId>
-  		<version>5.3.12-SNAPSHOT</version>
+  		<version>4.3.17-SNAPSHOT</version>
+	</dependency>
+  <dependency>
+  		<groupId>info.bitrich.xchange-stream</groupId>
+  		<artifactId>xchange-bitstamp</artifactId>
+  		<version>4.3.17-SNAPSHOT</version>
 	</dependency>
 	
 	<dependency>
