--- a/pom.xml
+++ b/pom.xml
@@ -112,12 +112,16 @@
   		<artifactId>xchange-cexio</artifactId>
   		<version>4.4.0</version>
 	</dependency>
-  <dependency>
+    <dependency>
   		<groupId>info.bitrich.xchange-stream</groupId>
   		<artifactId>xchange-bitstamp</artifactId>
   		<version>4.4.0</version>
 	</dependency>
-	
+	<dependency>
+  		<groupId>info.bitrich.xchange-stream</groupId>
+  		<artifactId>xchange-kraken</artifactId>
+  		<version>4.4.0</version>
+	</dependency>
 	<dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
